# doppio

./: Cargo.toml  DESIGN.md  README.md
benches/: throughput.rs
examples/: hit_rate.rs
src/: builder.rs  cache.rs  lib.rs  listener.rs  weigher.rs
src/buffer/: read.rs  write.rs
src/expiry/: mod.rs  timer_wheel.rs
src/metrics/: stats.rs
src/policy/: lru.rs  mod.rs  tinylfu.rs
src/policy/sketch/: doorkeeper.rs  frequency.rs  mod.rs
src/store/: sharded.rs
tests/: basic.rs
