[package]
name = "doppio"
version = "0.1.0"
edition = "2021"
description = "A high-performance Rust cache library using W-TinyLFU, inspired by Caffeine and Ristretto"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Yubinghan/doppio"
homepage = "https://github.com/Yubinghan/doppio"
documentation = "https://docs.rs/doppio"
readme = "README.md"
keywords = ["cache", "lfu", "tinylfu", "concurrent", "performance"]
categories = ["caching", "concurrency", "data-structures"]
authors = ["Yubinghan"]

[lib]
name = "doppio"

[dependencies]
parking_lot = "0.12"
crossbeam-queue = "0.3"
ahash = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
moka = { version = "0.12", features = ["sync"] }
quick_cache = "0.6"

[[bench]]
name = "throughput"
harness = false
